# LibreUni

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODEX.md  Dockerfile  GEMINI.md  LICENSE  README.md  astro.config.mjs  docker-compose.local.yml  docker-compose.yml  fix_answers.py  lighthouserc.cjs  opencode.json  package-lock.json  package.json  playwright.config.mjs  pyproject.toml  tailwind.config.mjs
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: deploy.yml  quality.yml  scheduled.yml
.opencode/agents/: pedagogical-reviewer.md
apps/history/: package.json
apps/lang/: package.json
apps/main/: astro.config.mjs  package.json  tailwind.config.mjs
docker/: nginx.conf
docs/: AGENT_INTEGRATIONS.md  AGENT_WORKFLOWS.md  PUML.md  RULES.md  TESTING.md  UX.md
docs/SKILLS/: COURSE_REPAIR.md  (+3 more)
libreuni_agent/: __init__.py  audit.py  cli.py  config.py  graph.py  llm.py  mcp_server.py  mvp.py  research.py  rules.py  state.py
scripts/: auto_source.py  check_slugs.js  course_integrity.py  course_stats.py  fix-paths.js  fix.py  fix_plantuml.py  generate.py  migrate-props.py  patch_careers.py  plantuml-diagnostics.mjs  repair_runner.py  temp_migrate_lesson_manifests.py  test_course_integrity.py  test_plantuml_diagnostics.mjs  test_quality_contract.mjs  validate-course-visuals.mjs  validate-rendered-lessons.mjs  verify-props.py  verify_lessons.py
tools/: build-static-app.mjs  copy-ux-report.mjs  dev-static-app.mjs  fix-static-paths.mjs  generate-course-pdfs.mjs  run-lighthouse-ci.mjs  run-workspace-script.mjs  serve-test-apps.mjs
(+1223 files in other folders)
