[project]
name = "libreuni-agent-workflows"
version = "0.1.0"
description = "Evidence-driven LangGraph workflows for authoring and auditing LibreUni courses"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "openai>=1.50.0",
  "ddgs>=9.0.0",
  "beautifulsoup4>=4.12.0",
  "pyyaml>=6.0.0",
  "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["libreuni_agent*"]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[project.scripts]
libreuni-agent = "libreuni_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests/agent_workflows"]
